[package]
name = "catport"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"]}
chrono = "0.4.41"
clap = { version = "4.5.44", features = ["derive"] }
futures-util = "0.3.31"
notify = "8.2.0"
serde = "1.0.219"
serde_json = "1.0.142"
syntect = "5.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"]}
